[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "getreth"
version = "0.1.0"
description = "Check ETH and rETH balances and track profit/loss for an Ethereum address."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0",
    "web3>=7.13.0",
]

[project.scripts]
getreth = "eth_balance:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["eth_balance", "main"]